# cyborg-coffeeshop

./: .env.vault  .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  main.tf  s3.tf
backend/: pyproject.toml
backend/app/: backend_pre_start.py  crud.py  event_handler.py  main.py  tests_pre_start.py  utils.py
backend/app/alembic/versions/: 05d2137efd99_remove_product_rating_col.py  3abd5e91a7be_add_review_table.py  429e9ab04ad7_remove_items_table.py  4ba1c09f9700_add_orderaddress_link_table.py  6b595fb76cca_add_stripe_cols_to_order.py  732337727baf_add_shipping_address_id.py  78a9243d76b6_add_images_to_product_table.py  887f19ed098d_add_color_col_to_category_table.py  916767d42bf4_add_order_table_to_schema.py  dcca9f7bbb35_add_review_relation_to_user_table.py  ea985c2c7ff8_add_order_table.py  eccc5e157037_add_payment_flow_tables.py  ee1af39f5304_remove_items_from_user.py  f28c80dd85b2_add_product_and_category_tables_add_.py  fc7bf905a8af_make_product_names_unique.py  fcfed32d7551_make_product_images_optional.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: addresses.py  carts.py  login.py  orders.py  payment.py  products.py  reviews.py  users.py  utils.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  address.py  auth.py  cart.py  cart_item.py  category.py  item.py  order.py  order_item.py  product.py  review.py  shared.py  stripe.py  user.py
backend/app/services/: product.py
backend/app/tests/utils/: user.py
backend/scripts/: revision.sh
frontend/: Dockerfile  eslint.config.js  index.html  openapi.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  (+4 more)
(+62 files in other folders)
